# api-rust

./: README.md
api-rust/: .env  .gitignore  Cargo.toml  commands.sh  docker-compose.yml
api-rust/migrations/2024-01-28-221711_users/: up.sql
api-rust/src/: main.rs  schema.rs
api-rust/src/db/: connection.rs
api-rust/src/models/: user.rs
api-rust/src/routes/: user_routes.rs
