[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = "0.4.11"
diesel = { version = "1.4.7", features = ["postgres"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"